--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 <body>
     <header>
         <div class="header-items">
+            <i class="fa-solid fa-bars"></i>
             <h1 class="title"><a href="#">InvizHer</a></h1>
             <div class="header-icons">
-                <i class="fa-solid fa-laptop-code top-icon"></i>
-                <i class="fa-solid fa-mug-saucer top-icon"></i>
-                <i class="fa-solid fa-square-caret-down top-icon"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
     </header>
@@ -30,11 +29,19 @@
        <div class="head-content">
         <h2>Learn to Code</h2>
         <p>InvizHer helps you to solve your queries and problems related to coding and programming. Also provides you the content and information about to coding, web development, software development, github projects and many more.</p>
-        <div class="head-btn">
-            <a class="btn-one">Categories</a>
-            <a class="btn-two">Blog</a>
+        <div class="search-container">
+            <input type="text" id="search-bar" placeholder="Search Here...">
+            <button type="button" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
        </div>
+
+       <div class="categories-container">
+        <div class="category"><i class="fa-brands fa-html5"></i><h3>HTML</h3></div>
+        <div class="category"><i class="fa-brands fa-css3-alt"></i><h3>CSS</h3></div>
+        <div class="category"><i class="fa-brands fa-html5"></i><h3>HTML</h3></div>
+        <div class="category"><i class="fa-brands fa-css3-alt"></i><h3>CSS</h3></div>
+       </div>
+
     </main>
 </body>
 </html>
