--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <button type="button" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
        </div>
-
+       <h2 style="text-align: center; margin-top: 4rem;">Explore Categories</h2>
        <div class="categories-container">
-        <div class="category"><i class="fa-brands fa-html5"></i><h3>HTML</h3></div>
-        <div class="category"><i class="fa-brands fa-css3-alt"></i><h3>CSS</h3></div>
-        <div class="category"><i class="fa-brands fa-html5"></i><h3>HTML</h3></div>
-        <div class="category"><i class="fa-brands fa-css3-alt"></i><h3>CSS</h3></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><h3>Tutorials</h3></div>
+        <div class="category"><i class="fa-regular fa-file-code"></i><h3>Notes</h3></div>
+        <div class="category"><i class="fa-brands fa-square-github"></i><h3>Projects</h3></div>
+        <div class="category"><i class="fa-solid fa-pager"></i><h3>Courses</h3></div>
        </div>
 
     </main>
