--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </div>
     <main>
        <div class="head-content">
-        <h2>Learn to Code</h2>
-        <p>InvizHer helps you to solve your queries and problems related to coding and programming. Also provides you the content and information about to coding, web development, software development, github projects and many more.</p>
+        <h2>Explore Your Development</h2>
+        <p>Here we go with latest projects, coding resources, programmers need and many more.</p>
         <div class="search-container">
             <input type="text" id="search-bar" placeholder="Search Here...">
             <button type="button" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
