--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </div>
     <main>
        <div class="head-content">
-        <h2>Explore Your Development</h2>
-        <p>Here we go with latest projects, coding resources, programmers need and many more.</p>
+        <h2>Make Your Coding Journey Easier</h2>
+        <p>Here we go with latest coding projects, new initiative ideas, coding resources and all what you need as programmer.</p>
         <div class="search-container">
             <input type="text" id="search-bar" placeholder="Search Here...">
             <button type="button" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
