--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Beiruti:wght@200..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
 
     <title>InvizHer Blog</title>
     
@@ -22,7 +24,7 @@
             <i class="fa-solid fa-bars"></i>
             <h1 class="title"><a href="#">InvizHer</a></h1>
             <div class="header-icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-mug-saucer"></i>
             </div>
         </div>
     </header>
