--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-bars"></i>
             <h1 class="title"><a href="#">InvizHer</a></h1>
             <div class="header-icons">
-                <i class="fa-solid fa-mug-saucer"></i>
+                <i class="fa-solid fa-laptop-code"></i>
             </div>
         </div>
     </header>
@@ -74,12 +74,14 @@
 
 
 
-       <h2 style="text-align: center; margin-top: 4rem;">Explore Categories</h2>
+       <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem;">Explore Categories</h2>
        <div class="categories-container">
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><h3>Tutorials</h3></div>
-        <div class="category"><i class="fa-regular fa-file-code"></i><h3>Notes</h3></div>
-        <div class="category"><i class="fa-brands fa-square-github"></i><h3>Projects</h3></div>
-        <div class="category"><i class="fa-solid fa-pager"></i><h3>Courses</h3></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Latest</p><p>Projects</p></div></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Language</p><p>Notes</p></div></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Interview</p><p>Questions</p></div></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>WebDev</p><p>Projects</p></div></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Projects</p><p>Ideas</p></div></div>
+        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Question</p><p>Paprs</p></div></div>
        </div>
 
     </main>
