--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
        <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem;">Explore Categories</h2>
        <div class="categories-container">
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Latest</p><p>Projects</p></div></div>
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Language</p><p>Notes</p></div></div>
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Interview</p><p>Questions</p></div></div>
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>WebDev</p><p>Projects</p></div></div>
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Projects</p><p>Ideas</p></div></div>
-        <div class="category"><i class="fa-solid fa-laptop-code"></i><div class="cate-name"><p>Question</p><p>Paprs</p></div></div>
+        <div class="category"><i class="fa-solid fa-gears"></i><div class="cate-name"><p>Latest</p><p>Projects</p></div></div>
+        <div class="category"><i class="fa-solid fa-file-code"></i><div class="cate-name"><p>Language</p><p>Notes</p></div></div>
+        <div class="category"><i class="fa-solid fa-clipboard-question"></i><div class="cate-name"><p>Interview</p><p>Questions</p></div></div>
+        <div class="category"><i class="fa-regular fa-newspaper"></i><div class="cate-name"><p>WebDev</p><p>Projects</p></div></div>
+        <div class="category"><i class="fa-solid fa-lightbulb"></i><div class="cate-name"><p>Projects</p><p>Ideas</p></div></div>
+        <div class="category"><i class="fa-solid fa-file-pen"></i><div class="cate-name"><p>Question</p><p>Paprs</p></div></div>
        </div>
 
     </main>
