--- a/index.html
+++ b/index.html
@@ -18,24 +18,21 @@
     
 </head>
 <body>
-<div class="header-container">
     <header>
         <div class="header-items">
-            <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
             <h1 class="title"><a href="#">InvizHer</a></h1>
             <div class="sidebar" id="mySidebar">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                <button class="closebtn" onclick="closeNav()"><i class="fa-solid fa-xmark"></i></button>
                 <a href="#home">Home</a>
                 <a href="#services">Services</a>
                 <a href="#clients">Clients</a>
                 <a href="#contact">Contact</a>
+                <a href="#contact">Contact</a>
             </div>
-            <div class="header-icons">
-                <i class="fa-solid fa-fire"></i>
-            </div>
+            <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
         </div>
     </header>
-</div>
+
     <main>
     <section class="head">
         <h2>Make Your Coding Journey Easier</h2>
