--- a/index.html
+++ b/index.html
@@ -21,14 +21,26 @@
     <header>
         <div class="header-items">
             <h1 class="title"><a href="#">InvizHer</a></h1>
-            <div class="sidebar" id="mySidebar">
+            <nav class="sidebar" id="mySidebar">
                 <button class="closebtn" onclick="closeNav()"><i class="fa-solid fa-xmark"></i></button>
-                <a href="#home">Home</a>
-                <a href="#services">Services</a>
-                <a href="#clients">Clients</a>
-                <a href="#contact">Contact</a>
-                <a href="#contact">Contact</a>
-            </div>
+                <p>Explore More</p>
+                <ul class="nav-list">
+                    <li><i class="fa-solid fa-house"></i><a href="#Home">Home</a></li>
+                    <li><i class="fa-solid fa-file-pen"></i><a href="">Posts</a></li>
+                    <li><i class="fa-solid fa-file-code"></i><a href="">Notes</a></li>
+                    <li><i class="fa-brands fa-html5"></i><a href="">Webdev</a></li>
+                    <li><i class="fa-solid fa-gears"></i><a href="">Projects</a></li>
+                    <li><i class="fa-solid fa-clipboard-question"></i><a href="">Questions</a></li>
+                </ul>
+                <ul class="nav-list social">
+                    <li><i class="fa-brands fa-youtube"></i><a href="#Home">YouTube</a></li>
+                    <li><i class="fa-brands fa-square-github"></i><a href="">GitHub</a></li>
+                    <li><i class="fa-brands fa-square-x-twitter"></i><a href="">Twitter</a></li>
+                    <li><i class="fa-brands fa-linkedin"></i><a href="">Linkedin</a></li>
+                    <li><i class="fa-brands fa-instagram"></i><a href="">instagram</a></li>
+                    <li><i class="fa-brands fa-telegram"></i><a href="">Telegram</a></li>
+                </ul>
+            </nav>
             <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
         </div>
     </header>
@@ -83,7 +95,7 @@
         <div class="category"><i class="fa-solid fa-gears"></i><div class="cate-name"><p>Latest</p><p>Projects</p></div></div>
         <div class="category"><i class="fa-solid fa-file-code"></i><div class="cate-name"><p>Language</p><p>Notes</p></div></div>
         <div class="category"><i class="fa-solid fa-clipboard-question"></i><div class="cate-name"><p>Interview</p><p>Questions</p></div></div>
-        <div class="category"><i class="fa-regular fa-newspaper"></i><div class="cate-name"><p>WebDev</p><p>Projects</p></div></div>
+        <div class="category"><i class="fa-brands fa-html5"></i><div class="cate-name"><p>WebDev</p><p>Projects</p></div></div>
         <div class="category"><i class="fa-solid fa-lightbulb"></i><div class="cate-name"><p>Projects</p><p>Ideas</p></div></div>
         <div class="category"><i class="fa-solid fa-file-pen"></i><div class="cate-name"><p>Question</p><p>Paprs</p></div></div>
        </div>
