--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <section class="head">
             <h2>Make Your Coding Journey Easier</h2>
-            <p>Here we go with latest coding projects, new initiative ideas, coding resources and all what you need as programmer.</p>
+            <p>Here we go with latest coding projects, new initiative ideas, coding resources components and all what you need as programmer.</p>
         <div class="search-container">
             <div class="search-bar">
                 <input type="text" class="search-form" id="searchInput" placeholder="Search posts...">
@@ -162,6 +162,35 @@
          </section>
 
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-about">
+                <h2>InvizHer</h2>
+                <p>Here we go with latest coding projects, new initiative ideas, coding resources, components and all what you need as programmer.</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-social">
+                    Social
+                    <a href="#">GitHub</a>
+                    <a href="#">YouTube</a>
+                    <a href="#">Instgram</a>
+                </div>
+                <div class="footer-pages">
+                    Pages
+                    <a href="#">Terms</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Disclimer</a>
+                </div>
+                <div class="footer-support">
+                    Support
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                </div>
+            </div>
+            <p class="copyright">Made with love by InvizHer - 2024</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
