--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@
         </div>
         <p class="copyright">Made with ❤️ by InvizHer - 2024</p>
     </footer>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
