--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Linked Files-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/primary.css" />
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -44,7 +45,7 @@
     </header>
 
     <main>
-        <section class="head">
+        <section class="head" data-aos="fade-down">
             <h2>Make Your Coding Journey Easier</h2>
             <p>Here we go with latest coding projects, new initiative ideas, coding resources components and all what you need as programmer.</p>
         <div class="search-container">
@@ -55,7 +56,7 @@
         </div>
         </section>
     
-        <section class="posts">
+        <section class="posts" data-aos="fade-up">
             <div class="tag-buttons">
                 <button class="tag-button active" data-tag="all">All</button>
                 <button class="tag-button" data-tag="projects">Projects</button>
@@ -153,9 +154,9 @@
         <section class="categories">
             <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem; color: #515e7b;">Explore Categories</h2>
             <div class="categories-container">
-             <div class="category"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
-             <div class="category"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
-             <div class="category"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
+             <div class="category" data-aos="fade-down"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
+             <div class="category" data-aos="fade-down"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
+             <div class="category" data-aos="fade-down"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
             </div>
          </section>
 
@@ -189,7 +190,7 @@
         </div>
         <p class="copyright">Made with love by InvizHer - 2024</p>
     </footer>
-    <script src="assets/js/scrollreveal.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
