--- a/index.html
+++ b/index.html
@@ -160,6 +160,27 @@
             </div>
          </section>
 
+         <section class="trending" >
+            <h2 style="text-align: center; margin: 3rem 0; font-size: 1.4rem; color: #515e7b;">Top Trending</h2>
+            <div class="trending-container">
+                <div class="trending-box" data-aos="fade-up">
+                    <h2>Projects</h2>
+                    <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Mini Portfolio Website Using HTML CSS and JS</a></h3></div>
+                    <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Dark Portfolio Website Using HTML CS and Js</a></h3></div>
+                    <div class="trending-item"><i class="fa-solid fa-headphones exp-icon"></i> <h3><a href="#">Telegram Music Bot Using Python and Pyrogram</a></h3></div>
+                    <div class="trending-view-all"><a href="#">View All</a></div>
+                </div>
+                <div class="trending-box" data-aos="fade-up">
+                    <h2>Notes</h2>
+                    <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C Language Handwritten Notes</a></h3></div>
+                    <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C++ Langugae Handwritten Notes</a></h3></div>
+                    <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Java Langugae Handwritten Notes</a></h3></div>
+                    <div class="trending-item"><i class="fa-solid fa-headphones exp-icon"></i> <h3><a href="#">Python Language Handwritten Notes</a></h3></div>
+                    <div class="trending-view-all"><a href="#">View All</a></div>
+                </div>
+            </div>
+         </section>
+
     </main>
 
     <footer>
@@ -188,7 +209,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">Made with love by InvizHer - 2024</p>
+        <p class="copyright">© InvizHer 2024 - All Rights Reserved.</p>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/script.js"></script>
