--- a/index.html
+++ b/index.html
@@ -151,26 +151,17 @@
     
         <div id="toast" class="toast">No more posts available</div>
 
-        <section class="categories">
-            <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem; color: #515e7b;">Sub Categories</h2>
-            <div class="categories-container">
-             <div class="category" data-aos="fade-down"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
-             <div class="category" data-aos="fade-down"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
-             <div class="category" data-aos="fade-down"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
-            </div>
-         </section>
-
          <section class="trending" >
             <h2 style="text-align: center; margin: 2rem 0 3rem 0; font-size: 1.4rem; color: #515e7b;">Trending Now</h2>
             <div class="trending-container">
-                <div class="trending-box" data-aos="fade-down">
+                <div class="trending-box" data-aos="fade">
                     <h2>Projects</h2>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Mini Portfolio Website Using HTML CSS and JS</a></h3></div>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Dark Portfolio Website Using HTML CS and Js</a></h3></div>
                     <div class="trending-item"><i class="fa-solid fa-headphones exp-icon"></i> <h3><a href="#">Telegram Music Bot Using Python and Pyrogram</a></h3></div>
                     <div class="trending-view-all"><a href="#">View All</a></div>
                 </div>
-                <div class="trending-box" data-aos="fade-down">
+                <div class="trending-box" data-aos="fade">
                     <h2>Notes</h2>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C Language Handwritten Notes</a></h3></div>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C++ Langugae Handwritten Notes</a></h3></div>
@@ -178,6 +169,15 @@
                     <div class="trending-item"><i class="fa-solid fa-headphones exp-icon"></i> <h3><a href="#">Python Language Handwritten Notes</a></h3></div>
                     <div class="trending-view-all"><a href="#">View All</a></div>
                 </div>
+            </div>
+         </section>
+
+         <section class="categories">
+            <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem; color: #515e7b;">Sub Categories</h2>
+            <div class="categories-container">
+             <div class="category" data-aos="fade"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
+             <div class="category" data-aos="fade"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
+             <div class="category" data-aos="fade"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
             </div>
          </section>
 
