--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Linked Files-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/primary.css" />
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -49,7 +48,7 @@
 
 
     <main>
-        <section class="head" data-aos="fade-down">
+        <section class="head inz-fade">
             <h2>Make Your Coding Journey Easier</h2>
             <p>Here we go with latest coding projects, new initiative ideas, coding resources components and all what you need as programmer.</p>
         <div class="search-container">
@@ -61,7 +60,7 @@
         </section>
     
 
-        <section class="posts" data-aos="fade-up">
+        <section class="posts inz-fade">
 
             <div class="tag-buttons">
                 <button class="tag-button active" data-tag="all">All</button>
@@ -125,14 +124,14 @@
          <section class="trending" >
             <h2 style="text-align: center; margin: 2rem 0 3rem 0; font-size: 1.4rem; color: #515e7b;">Trending Now</h2>
             <div class="trending-container">
-                <div class="trending-box" data-aos="fade-right">
+                <div class="trending-box inz-fade">
                     <h2>Projects</h2>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Mini Portfolio Website Using HTML CSS and JS</a></h3></div>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">Dark Portfolio Website Using HTML CS and Js</a></h3></div>
                     <div class="trending-item"><i class="fa-solid fa-headphones exp-icon"></i> <h3><a href="#">Telegram Music Bot Using Python and Pyrogram</a></h3></div>
                     <div class="trending-view-all"><a href="#">View All</a></div>
                 </div>
-                <div class="trending-box" data-aos="fade-left">
+                <div class="trending-box inz-fade">
                     <h2>Notes</h2>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C Language Handwritten Notes</a></h3></div>
                     <div class="trending-item"><i class="fa-regular fa-address-card exp-icon"></i> <h3><a href="#">C++ Langugae Handwritten Notes</a></h3></div>
@@ -147,17 +146,18 @@
          <section class="categories">
             <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem; color: #515e7b;">Sub Categories</h2>
             <div class="categories-container">
-             <div class="category" data-aos="fade-down"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
-             <div class="category" data-aos="fade-down"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
-             <div class="category" data-aos="fade-down"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
+             <div class="category inz-fade"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
+             <div class="category inz-fade"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
+             <div class="category inz-fade"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
             </div>
          </section>
 
          <section class="github-profile">
             <h2 style="text-align: center; margin: 4rem 0; font-size: 1.4rem; color: #515e7b;">Want To Explore More ?</h2>
-            <div class="github-container" data-aos="fade">
-                <div class="github-img"><img src="assets/img/github-profile.png" alt="Github-Profile-Img"/></div>
-                <div class="visit-github"><h3>Visit GitHub Profile</h3><p>Here you can simply visit my github profile where you can explore new public projects and source codes.</p><div class="github-link"><a>See GitHub Profile <i class="fa-solid fa-arrow-right"></i></a></div></div>
+            <div class="github-container inz-fade">
+                <div class="github-img"><img src="/assets/img/github-profile.png" alt="Github-Profile-Img"/></div>
+                <div class="visit-github"><h3>Visit GitHub Profile</h3><p>Here you can simply visit my github profile where you can explore new public projects and source codes.</p><div class="github-link"><a>Visit GitHub Profile <i class="fa-solid fa-arrow-right"></i></a></div></div>
+                
             </div>
          </section>
 
@@ -188,6 +188,7 @@
                 </div>
                 <div class="footer-support">
                     Support
+                    <a href="mailto:invizher@gmail.com">Mail</a>
                     <a href="pages/about.html">About</a>
                     <a href="pages/contact.html">Contact</a>
                 </div>
@@ -196,8 +197,6 @@
         </div>
         <p class="copyright">© InvizHer 2024 - All Rights Reserved.</p>
     </footer>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
