--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
          <section class="languages">
             <h2>Languages</h2>
-            <div class="language-container">
+            <div class="language-container inz-fade">
                 <a href="#" class="language"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" width="36" height="36" viewBox="0 0 36 36"><style>.st0{fill:#fff}</style><path d="M27.5 12.6c-.1-.2-.2-.4-.4-.5l-8.6-5c-.1-.1-.3-.1-.5-.1s-.4 0-.5.1l-8.6 5c-.3.2-.5.6-.5 1V23c0 .2 0 .4.2.6.1.1.2.3.3.3l8.6 5c.1.1.3.1.5.1s.4-.1.6-.1l8.6-5c.3-.2.5-.6.5-1V13c-.1-.1-.1-.3-.2-.4zM18 22.4c1.6 0 3-.9 3.8-2.2l2.3 1.4c-1.2 2-3.5 3.4-6.1 3.4-3.9 0-7-3.2-7-7 0-3.9 3.2-7 7-7 2.6 0 4.9 1.4 6.1 3.6l-2.3 1.3c-.7-1.3-2.2-2.2-3.8-2.2-2.4 0-4.4 2-4.4 4.4 0 2.3 2 4.3 4.4 4.3z" class="st0"/></svg>
                      <h3>C</h3></a>
 
