Disabled trending section 😵‍💫

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </section>
 
 
-         <section class="trending" >
+<!--          <section class="trending" >
             <h2 style="text-align: center; margin: 2rem 0 3rem 0; font-size: 1.4rem; color: #515e7b;">Trending Now</h2>
             <div class="trending-container">
                 <div class="trending-box inz-fade">
@@ -148,7 +148,7 @@
                     <div class="trending-view-all"><a href="#">View All</a></div>
                 </div>
             </div>
-         </section>
+         </section> -->
 
          <section class="languages">
             <h2>Languages</h2>
@@ -203,14 +203,14 @@
          </section>
 
 
-         <!-- <section class="categories">
+         <section class="categories">
             <h2 style="text-align: center; margin-top: 4rem; font-size: 1.4rem; color: #515e7b;">Sub Categories</h2>
             <div class="categories-container">
              <div class="category inz-fade"><i class="fa-solid fa-gears"></i><h2>Latest Projects</h2><p>You can explore our latest projects related to web development or other topics.</p></div>
              <div class="category inz-fade"><i class="fa-solid fa-file-pen"></i><h2>Language Notes</h2><p>You can explore programming language handwritten and printed notes.</p></div>
              <div class="category inz-fade"><i class="fa-brands fa-html5"></i><h2>Webdev Projects</h2><p>You can explore special web development projects in different categories.</p></div>
             </div>
-         </section> -->
+         </section>
 
          <section class="github-profile">
             <h2>Want To Explore More ?</h2>
