--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
         <div class="header-items">
-            <h1 class="title"><a href="#">InvizHer</a></h1>
+            <h1 class="title"><a href="index.html">InvizHer</a></h1>
             <nav class="sidebar" id="mySidebar">
                 <button class="closebtn" onclick="closeNav()"><i class="fa-solid fa-xmark"></i></button>
                 <p>Explore More</p>
@@ -128,7 +128,7 @@
         </section>
 
 
-<!--          <section class="trending" >
+         <!-- <section class="trending" >
             <h2 style="text-align: center; margin: 2rem 0 3rem 0; font-size: 1.4rem; color: #515e7b;">Trending Now</h2>
             <div class="trending-container">
                 <div class="trending-box inz-fade">
@@ -151,7 +151,11 @@
          </section> -->
 
          <section class="languages">
-            <h2>Languages</h2>
+            <h2>Languages Catlog</h2>
+            <div class="lang-box">
+            <div class="lang-img inz-fade">
+                <img src="/assets/img/lang-img.png"/>
+            </div>
             <div class="language-container inz-fade">
                 <a href="#" class="language"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" width="36" height="36" viewBox="0 0 36 36"><style>.st0{fill:#fff}</style><path d="M27.5 12.6c-.1-.2-.2-.4-.4-.5l-8.6-5c-.1-.1-.3-.1-.5-.1s-.4 0-.5.1l-8.6 5c-.3.2-.5.6-.5 1V23c0 .2 0 .4.2.6.1.1.2.3.3.3l8.6 5c.1.1.3.1.5.1s.4-.1.6-.1l8.6-5c.3-.2.5-.6.5-1V13c-.1-.1-.1-.3-.2-.4zM18 22.4c1.6 0 3-.9 3.8-2.2l2.3 1.4c-1.2 2-3.5 3.4-6.1 3.4-3.9 0-7-3.2-7-7 0-3.9 3.2-7 7-7 2.6 0 4.9 1.4 6.1 3.6l-2.3 1.3c-.7-1.3-2.2-2.2-3.8-2.2-2.4 0-4.4 2-4.4 4.4 0 2.3 2 4.3 4.4 4.3z" class="st0"/></svg>
                      <h3>C</h3></a>
@@ -197,6 +201,8 @@
                     <path class="st0" d="M8.3,21.5h2.4c2,0,3.5-1.5,3.5-3.5s-1.6-3.5-3.5-3.5H8.3V21.5z M9.9,20V16h0.8c1.2,0,2,0.9,2,2s-0.8,2-2,2H9.9z   M17.7,21.6c1.5,0,2.5-0.9,2.5-2.1c0-1.1-0.7-1.8-1.8-2.1l-0.8-0.2c-0.5-0.1-0.9-0.4-0.8-0.7c0-0.4,0.4-0.6,0.8-0.6  c0.4,0,0.8,0.2,1,0.7H20c0-1.1-1-2.2-2.5-2.2c-1.4,0-2.4,0.8-2.4,2.1c0,1.1,0.8,1.8,1.9,2.1l0.7,0.2c0.7,0.2,0.9,0.4,0.9,0.8  c0,0.4-0.4,0.6-0.9,0.6c-0.6,0-1.1-0.3-1.2-0.9h-1.6C15,20.4,15.9,21.6,17.7,21.6z M20.3,21.5h1.6l0.6-1.5h2.9l0.6,1.5h1.6l-3-7  h-1.4L20.3,21.5z M23.1,18.7l0.9-2.1l0.9,2.1H23.1z"/>
                     </svg> <h3>DSA</h3></a>
             </div>
+            </div> <!-- lang box tag end -->
+        
             <div class="show-more-container">
                 <button class="show-more">Show More</button>
             </div>
@@ -215,8 +221,8 @@
          <section class="github-profile">
             <h2>Want To Explore More ?</h2>
             <div class="github-container inz-fade">
-                <div class="visit-github"><h3>Visit GitHub Profile</h3><p>Here you can simply visit my github profile where you can explore new public projects and source codes.</p><div class="github-link"><a href="#">Visit GitHub Profile <i class="fa-solid fa-arrow-right"></i></a></div></div>
                 <div class="github-img"><img src="assets/img/github-profile.png" alt="Github-Profile-Img"/></div>
+                <div class="visit-github"><h3>Visit GitHub Profile</h3><p>Here you can simply visit my github profile where you can explore new public projects and source codes.</p><div class="github-link"><a href="#">Visit GitHub Profile <i class="fa-solid fa-arrow-right"></i></a></div></div>
                 
             </div>
          </section>
