--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main>
         <section class="head inz-fade">
-            <h2>Make Your Coding Journey Easier</h2>
+            <h2>Make Your Coding Joureny <span id="text-container"><span id="text"></span></span></h2>
             <p>Here we go with latest coding projects, new initiative ideas, coding resources components and all what you need as programmer.</p>
         <div class="search-container">
             <div class="search-bar">
