--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     
 
         <section class="posts inz-fade">
-
+            <div id="filterMessage" class="filter-message"></div>
+            
             <div class="tag-buttons">
                 <button class="tag-button active" data-tag="all">All</button>
                 <button class="tag-button" data-tag="projects">Projects</button>
